# aoc-2024

./: .gitignore  Cargo.toml
.cargo/: config.toml
day1/: problem.txt
src/: main.rs
src/day1/: main.rs
src/template/: aoc_cli.rs  day.rs  mod.rs  run_single.rs  runner.rs  timings.rs
src/template/commands/: mod.rs  solve.rs  time.rs
